sample-app/deployment_appuio-acm-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appuio-acm-example
  name: appuio-acm-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appuio-acm-example
  template:
    metadata:
      labels:
        app: appuio-acm-example
    spec:
      containers:
      - name: example-php-docker-helloworld
        image: quay.io/appuio/example-php-docker-helloworld
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 9090
            protocol: TCP
