sample-app/service_appuio-acm-example.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appuio-acm-example
  name: appuio-acm-example
spec:
  type: NodePort
  selector:
    app: appuio-acm-example
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
