sample-app/route_appuio-acm-example.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appuio-acm-example
  name: appuio-acm-example
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: appuio-acm-example
